Rearranged everything to get Media Queries to Work------- Turns out it was a spacing issue in the media query argument, though

--- a/Galen-Kate/css/_base.sass
+++ b/Galen-Kate/css/_base.sass
@@ -1,9 +1,11 @@
-body
-  font-size: 1em
-  line-height: 1
+*
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
   box-sizing: border-box
+
+body
+  font-size: 1em
+  line-height: 1
 
 button
   background-color: $color5
