--- a/Galen-Kate/css/_image.sass
+++ b/Galen-Kate/css/_image.sass
@@ -1,19 +1,11 @@
 .profGreen
   content: url('../img/professor_green_1x.jpg')
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: $retina-min-dpi)
-    content: url('../img/professor_green_2x.jpg')
 
 .profDavis
   content: url('../img/professor_davis_1x.jpg')
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: $retina-min-dpi)
-    content: url('../img/professor_davis_2x.jpg')
 
 .profSmith
   content: url('../img/professor_smith_1x.jpg')
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: $retina-min-dpi)
-    content: url('../img/professor_smith_2x.jpg')
 
 .profKeller
   content: url('../img/professor_keller_1x.jpg')
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: $retina-min-dpi)
-    content: url('../img/professor_keller_2x.jpg')
