--- a/Galen-Kate/css/_layout.sass
+++ b/Galen-Kate/css/_layout.sass
@@ -8,43 +8,31 @@
 .col
   display: block
   float: left
-  margin: 1% 0 1% 0%
+  margin: 1% 0.5% 1% 0.5%
   &:first-child
     margin-left: 0
 
 
 /*Spans - Progressive Enhancement Version*/
-
 .span_3_of_3,
 .span_4_of_4
   width: 100%
 
 .span_2_of_3
-  width: 100%
-  @media (min-width: $large-screen-min-width)
-    width: 66.13%
+  width: 66.13%
 
 .span_1_of_3
-  width: 100%
-  background-color: black
-  @media screen and (min-width: 480 px)
-    width: 32.26%
-    background-color: white
+  width: 32.26%
 
 .span_3_of_4
-  width: 100%
-  @media (min-width: $large-screen-min-width)
-    width: 74.6%
+  width: 49.2%
 
 .span_2_of_4
-  width: 100%
-  @media (min-width: $large-screen-min-width)
-    width: 49.2%
+  width: 49.2%
 
 .span_1_of_4
-  width: 100%
-  @media screen and (min-width: $large-screen-min-width)
-    width: 23.8%
+  width: 23.8%
+
 
 
 /* clearing */
